[package]
name = "iced_7guis"
description = "An implementation of 7 GUIs using iced."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["7guis"]
# documentation = "https://docs.rs/iced_7guis"
homepage = "https://eugenkiss.github.io/7guis/"
repository = "https://github.com/dcampbell24/iced_7guis"
readme = "README.md"

[dependencies]
iced = { version = "0.5.2", features = ["canvas", "tokio", "debug"] }

[[bin]]
name = "7guis_counter"
path = "src/counter/main.rs"

[[bin]]
name = "7guis_temperature_converter"
path = "src/temperature_converter/main.rs"

[[bin]]
name = "7guis_flight_booker"
path = "src/flight_booker/main.rs"

[[bin]]
name = "7guis_timer"
path = "src/timer/main.rs"

[[bin]]
name = "7guis_crud"
path = "src/crud/main.rs"
