[package]
name = "iced_7guis"
description = "An implementation of 7 GUIs using iced."
version = "0.1.0"
edition = "2024"
rust-version =  "1.85"
license = "MIT OR Apache-2.0"
categories = ["gui"]
keywords = ["7guis"]
# documentation = "https://docs.rs/iced_7guis"
homepage = "https://eugenkiss.github.io/7guis/"
repository = "https://github.com/dcampbell24/iced_7guis"
readme = "README.md"

[dependencies]
anyhow = "1"
chrono = "0.4"
iced = { version = "0.14", features = ["canvas", "tokio", "debug"] }

[lints.clippy]
cargo = "warn"
pedantic = "warn"
